@@ -2,7 +2,7 @@ sg3-utils (1.42-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Tue, 09 Feb 2016 14:00:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.com>  Wed, 17 Feb 2016 15:00:00 -0500
 
 sg3-utils (1.41-0.1) unstable; urgency=low
 
