@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.42 [20160209] [svn: r661]
+Changelog for sg3_utils-1.42 [20160217] [svn: r662]
   - sg_timestamp: new, to report or set timestamp
   - sg_read_attr: new, supported by tape drives
   - sg_stpg: fix truncation of target port field
@@ -18,6 +18,7 @@ Changelog for sg3_utils-1.42 [20160209] [svn: r661]
     - rework lto tape vendor lpages
   - sg_vpd: add Block limits extension VPD page
     - add Device constituents VPD page
+    - add LB Protection VPD page (ssc 15-296r1)
     - LB provisioning VPD page: expand LBPRZ, add
       Minimum and Threshold percentage fields
     - rework lto tape vendor VPD pages
